--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   },
   "devDependencies": {
     "@babel/plugin-transform-react-jsx": "^7.9.4",
-    "babel-eslint": "^10.1.0"
+    "babel-eslint": "^10.1.0",
+    "babel-register": "^6.26.0"
   }
 }
