--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "@babel/plugin-transform-react-jsx": "^7.9.4",
+    "babel-eslint": "^10.1.0",
+    "babel-register": "^6.26.0"
+
   },
   "scripts": {
     "start": "react-scripts start",
